Fixes to results.tex

--- a/paper/methodology.tex
+++ b/paper/methodology.tex
@@ -290,9 +290,9 @@ All the experiments were run on Google Colaboratory\footnote{Accessed from: \url
 		\hline
 		\textbf{Type} & \textbf{Model} & \textbf{Details} \\
 		\hline
-		CPU & Intel (R) Xeon & 2.20Ghz 4 Cores \\
-		GPU & Nvidia Tesla P100 & 16GB using Cuda 11.1 \\
-		RAM & N/A & 25GB \\
+		CPU & Intel (R) Xeon & 2.20~Ghz 4 Cores \\
+		GPU & Nvidia Tesla P100 & 16~GB using Cuda 11.1 \\
+		RAM & N/A & 25~GB \\
 		\hline
 	\end{tabular}
 	\caption{Hardware provisioned in Google Colab.}
